--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,13 +9,13 @@
             "command": "/usr/bin/gcc",
             "args": [
                 "-g",
-                "./src/main.c",
-                "./src/init.c",
-                "./src/parser.c",
-                "./src/tools.c",
-                "./libft/libft.a",
-                "-I./inc",
-                "-I./libft"
+                "./srcs/main.c",
+                "./srcs/tools.c",
+                "./srcs/parser.c",
+                "./srcs/init.c",
+                "./srcs/libft/libft.a",
+                "-I./includes",
+                "-I./srcs/libft"
             ]
         }
     ]
